<resources>
    <string name="app_name">JustOne</string>
    <string name="nav_header_subtitle">Tutaj będzie Twój login</string>
    <string name="action_settings">Settings</string>

    <string name="problem_sign_in_toast">Problem z dostępem do konta. Sprawdź połączenie internetowe.</string>

    <string name="menu_home">Słowo dnia</string>
    <string name="menu_account">Moje konto</string>
    <string name="menu_my_collections">Moje kolekcje</string>
    <string name="menu_opinion">Podziel się opinią</string>
    <string name="menu_settings">Ustawienia</string>
    <string name="menu_terms_of_cond">Regulaminy</string>
    <string name="nav_header_describe">Nauka angielskiego po słowie dziennie</string>
    <string name="approve_regulations_checkbox">Akceptuję <a href="https://regulaminy.pl">regulaminy</a> (przytrzymaj, aby otworzyć).</string>
    <string name="content_description_justone_word_daily">JustOne Word Daily</string>
</resources>
